3.1.0
* getPagelist also compute the page hashes

3.0.0
* Added a command line tool
* Fixed a few bugs

2.0.0
* ObjectConverter isn't public anymore
* Implemented timeout
* Also handles DW 2012-01-25b
* Uses aXMLRPC instead of Apache xmlrpc, to enhance cookie handling

1.0.0
* Let pass options when editing a page
* Added DokuJClientConfig
* Let build a DokuJClient with an arbitrary XmlRpcClient
* Let pass arbitrary options when editing a page
* Throw a relevant exception when trying to create an empty new page

0.3.0
* Enhanced attachment manipularions
* Added getRecentChanges(java.util.Date date)
* Fixed bug when reading modification date with getPageInfo

0.2.0
* Added getPageVersions(String pageId)
* Fixed bug when reading page version with gePagelist

0.1.0